--- a/.exemple.env
+++ b/.exemple.env
@@ -1,9 +1,12 @@
+# Email
+RESEND_API_KEY=
 EMAIL_SENDER=
-EMAIL_PASS=
-EMAIL_USER=
 
+# BD
 DATABASE_URL=
-FRONTEND_URL=
-PORT=
+
+# Front
 FRONTEND_URL=
 JWT_SECRET=
+
+PORT= 
