--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aspas-note-backend",
+  "name": "foco-total-backend",
   "version": "1.0.0",
-  "description": "Backend da aplicação Aspas Note - App para salvar frases de famosos",
+  "description": "Backend da aplicação Foco Total - Sistema para gestão de tarefas",
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
@@ -14,12 +14,13 @@
     "postinstall": "prisma generate"
   },
   "keywords": [
-    "quotes",
-    "famous",
+    "tasks",
+    "management",
     "backend",
-    "api"
+    "api",
+    "foco-total"
   ],
-  "author": "",
+  "author": "Foco Total",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -27,8 +28,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^7.0.5",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
+    "resend": "^6.4.2",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
@@ -36,12 +41,13 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.6",
-    "@types/nodemailer": "^6.4.17",
     "jest": "^30.0.4",
     "nodemon": "^3.1.9",
+    "openapi-types": "^12.1.3",
     "prisma": "^5.10.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
